add icons for portfolio

--- a/index.html
+++ b/index.html
@@ -40,18 +40,6 @@
     <!-- "about" section -->
     <section id="about">
       <h2>About</h2>
-      <div>
-        <img
-          src="./assets/IMG_7873.jpeg"
-          style="
-            object-fit: contain;
-            width: 200px;
-            height: 300px;
-            border: solid 1px #ccc;
-          "
-        />
-      </div>
-
       <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park
         XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
@@ -67,11 +55,13 @@
       <h2>Portfolio</h2>
 
       <div>
+        <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
         <h3>Run Buddy</h3>
         <p>Created Run Buddy</p>
       </div>
 
       <div>
+        <img src="./assets/har.png" alt="icon from code refactor" />
         <h3>Code Refractor</h3>
         <p>Edited html and css code for Horieson</p>
       </div>
@@ -121,7 +111,6 @@
     <!-- footer -->
     <footer>
       <h2>❤️ Made with love by Jonathan.</h2>
-     
     </footer>
   </body>
 </html>
