styled about section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="hero"></section>
 
     <!-- "about" section -->
-    <section id="about">
+    <section id="about" class="intro">
       <h2>About</h2>
       <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park
