--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- "about" section -->
     <section id="about" class="intro">
-      <h2>About</h2>
+      <h2 class="section-title primary-border">About</h2>
       <p>
         butcher selfies chambray shabby chic gentrify readymade yr Echo Park
         XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
@@ -51,8 +51,8 @@
     </section>
 
     <!-- "portfolio" section -->
-    <section id="portfolio">
-      <h2>Portfolio</h2>
+    <section id="portfolio" class="work">
+      <h2 class="section-title secondary-border">Portfolio</h2>
 
       <div>
         <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
