--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
           <li>
             <a href="#contact">Contact</a>
           </li>
-          <!--add in resume pdf link in ahref-->
-          <li>
-            <a href="resume">Resume</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -57,24 +53,50 @@
       <div>
         <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
         <h3>Run Buddy</h3>
-        <p>Created Run Buddy</p>
+        <p>
+          Using HTML and CSS a landing page was created for Run Buddy: a service
+          that lets runners sign up for personal training.
+        </p>
       </div>
 
       <div>
         <img src="./assets/har.png" alt="icon from code refactor" />
         <h3>Code Refractor</h3>
-        <p>Edited html and css code for Horieson</p>
+        <p>
+          Edited HTML and CSS codebase to follow accessibility standards for
+          optimized search engine for Horieson marketing agency.
+        </p>
       </div>
-    </section>
 
-    <!-- "resume" section -->
-    <section>
-      <h2>Resume</h2>
+      <div>
+        <img
+          src="./assets/javascript.png"
+          alt="icon for javascript password generator"
+        />
+        <h3>Coming Soon: Password Generator</h3>
+        <p>
+          Creating an application that generates random passwords based on
+          crtieria selected.
+        </p>
+      </div>
     </section>
 
     <!-- "contact" section -->
     <section>
       <h2>Contact</h2>
+
+      <div class="contact-info">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2802.349648835198!2d-75.69955518431938!3d45.382117179100085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce06767ed07d43%3A0xd9bc94dc762fef0d!2sSchool%20of%20Computer%20Science%2C%20Carleton%20University!5e0!3m2!1sen!2sca!4v1638822473080!5m2!1sen!2sca"
+          width="400"
+          height="400"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        >
+        </iframe>
+      </div>
+
       <div class="hero-form">
         <h3>CONTACT ME</h3>
         <p>Fill out this form and I will reach out</p>
