add flexbox to header

--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
     <section id="about" class="intro">
       <h2 class="section-title primary-border">About</h2>
       <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo Park
-        XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
-        probably haven't heard of them single-origin coffee Vice fanny pack
-        fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
-        Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-        sustainable Intelligentsia umami deep v craft
+        Master in the social sciences now blending multidisciplinary design for
+        your products.
       </p>
     </section>
 
@@ -82,51 +78,69 @@
     </section>
 
     <!-- "contact" section -->
-    <section>
-      <h2>Contact</h2>
+    <section id="contact" class="contacts">
+      <h2 class="section-title secondary-border">Contact Me</h2>
+      <div class="flex">
+        <div class="contact-info">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2802.349648835198!2d-75.69955518431938!3d45.382117179100085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce06767ed07d43%3A0xd9bc94dc762fef0d!2sSchool%20of%20Computer%20Science%2C%20Carleton%20University!5e0!3m2!1sen!2sca!4v1638822473080!5m2!1sen!2sca"
+            width="400"
+            height="400"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          >
+          </iframe>
+        </div>
 
-      <div class="contact-info">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2802.349648835198!2d-75.69955518431938!3d45.382117179100085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce06767ed07d43%3A0xd9bc94dc762fef0d!2sSchool%20of%20Computer%20Science%2C%20Carleton%20University!5e0!3m2!1sen!2sca!4v1638822473080!5m2!1sen!2sca"
-          width="400"
-          height="400"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        >
-        </iframe>
-      </div>
+        <div class="hero-form">
+          <h3>CONTACT ME</h3>
+          <p>Fill out this form and I will reach out</p>
+          <!-- Add form element -->
+          <form>
+            <div class="form-field">
+              <label for="name">Enter full name:</label>
+              <input
+                type="text"
+                placeholder="Your Name"
+                name="name"
+                id="name"
+              />
+            </div>
 
-      <div class="hero-form">
-        <h3>CONTACT ME</h3>
-        <p>Fill out this form and I will reach out</p>
-        <!-- Add form element -->
-        <form>
-          <label for="name">Enter full name:</label>
-          <input type="text" placeholder="Your Name" name="name" id="name" />
-          <label for="email">Enter email address:</label>
-          <input
-            type="text"
-            placeholder="Email Address"
-            name="email"
-            id="email"
-          />
-          <label for="phone">Enter a telephone number:</label>
-          <input
-            type="text"
-            placeholder="Phone Number"
-            name="phone"
-            id="phone"
-          />
-          <label for="message">Message:</label>
-          <input
-            type="text"
-            placeholder="Your Message"
-            message="message"
-            id="message"
-          />
-          <button type="submit">Send!</button>
-        </form>
+            <div class="form-field">
+              <label for="email">Enter email address:</label>
+              <input
+                type="text"
+                placeholder="Email Address"
+                name="email"
+                id="email"
+              />
+            </div>
+
+            <div class="form-field">
+              <label for="phone">Enter a number:</label>
+              <input
+                type="text"
+                placeholder="Phone Number"
+                name="phone"
+                id="phone"
+              />
+            </div>
+
+            <div class="form-field">
+              <label for="message">Message:</label>
+              <input
+                type="text"
+                placeholder="Your Message"
+                message="message"
+                id="message"
+              />
+            </div>
+
+            <button type="submit">Send</button>
+          </form>
+        </div>
       </div>
     </section>
 
