--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <h2 class="section-title secondary-border">Portfolio</h2>
 
       <div>
-        <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
+        <a href="https://nickporjonathan.github.io/run-buddy/">
+          <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
+        </a>
         <h3>Run Buddy</h3>
         <p>
           Using HTML and CSS a landing page was created for Run Buddy: a service
@@ -56,7 +58,10 @@
       </div>
 
       <div>
-        <img src="./assets/har.png" alt="icon from code refactor" />
+        <a href="https://nickporjonathan.github.io/code-refactor/">
+          <img src="./assets/har.png" alt="icon from code refactor"
+        /></a>
+
         <h3>Code Refractor</h3>
         <p>
           Edited HTML and CSS codebase to follow accessibility standards for
@@ -84,8 +89,8 @@
         <div class="contact-info">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2802.349648835198!2d-75.69955518431938!3d45.382117179100085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce06767ed07d43%3A0xd9bc94dc762fef0d!2sSchool%20of%20Computer%20Science%2C%20Carleton%20University!5e0!3m2!1sen!2sca!4v1638822473080!5m2!1sen!2sca"
-            width="400"
-            height="400"
+            width="300"
+            height="300"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
@@ -146,7 +151,7 @@
 
     <!-- footer -->
     <footer>
-      <h2>❤️ Made with love by Jonathan.</h2>
+      <h2>Made with ❤️ by Jonathan</h2>
     </footer>
   </body>
 </html>
