--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
       <div>
         <a href="https://nickporjonathan.github.io/run-buddy/">
-          <img src="./assets/runbuddy.png" alt="run buddy icon from project" />
+          <img src="./assets/headband.png" alt="run buddy icon from project" />
         </a>
         <h3>Run Buddy</h3>
         <p>
